# simplevm

./: .gitignore  CMakeLists.txt  Makefile  addProject  context.c  context.h  main.c  opcodes.h  registers.h  simplevm.sublime-project  simplevm.sublime-workspace  vm.c  vm.h
Makefiles/: Doxyfile  DoxygenLayout.xml  bin_Makefile.template  bin_source.c  bin_source.cpp  bin_source.objc  buildsystem.make  copy_Makefile.template  getRevision  getVersion  lib_Makefile.template  lib_header.c  lib_header.cpp  lib_header.objc  lib_source.c  lib_source.cpp  lib_source.objc  makeDocs  sub_Makefile.template
core/: CMakeLists.txt  Makefile  config.h.in  core.h  vm.c  vm.h
src/: vm.c
vm/: CMakeLIsts.txt  CMakeLists.txt  Makefile  context.c  context.h  main.c
